--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "author": "TomaSajt",
     "license": "WTHPL",
     "dependencies": {
-        "@types/node": "^18.0.0",
         "dotenv": "^16.0.1",
+        "prompt": "^1.3.0",
         "ts-node": "^10.8.1",
         "typescript": "^4.7.4"
+    },
+    "devDependencies": {
+        "@types/node": "^18.0.0",
+        "@types/prompt": "^1.1.2"
     }
 }
